# flumox

./: Cargo.toml  Containerfile  LICENSE  README.md
channel-map/: Cargo.toml
channel-map/src/: lib.rs
client/: package-lock.json  package.json
client/src/: main.css  stores.ts
client/src/lib/: team.ts
client/src/lib/api/: session.ts
db/: drop.sql  schema.sql  seed.sql  truncate.sql
db/seed/: sample-cs.sql  sample-maker.json5  sample.json5
flumox/: Cargo.toml
flumox-client/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.node.json  vite.config.ts
flumox-client/public/: browserconfig.xml
flumox-client/src/: main.ts  stores.ts
flumox-client/src/components/: App.svelte  Details.svelte  Game.svelte  Login.svelte  Main.svelte  Settings.svelte  Time.svelte  Timer.svelte  Toasts.svelte
flumox-client/src/components/game/: Game.svelte  View.svelte  Widget.svelte
flumox-client/src/components/game/widgets/: Countdown.svelte  Hint.svelte  Prompt.svelte  Text.svelte
flumox-client/src/components/icons/: Cross.svelte  Gear.svelte
flumox-client/src/lib/: action.ts  deflate.ts  error.ts  persistent.ts  team.ts  toast.ts  view.ts
flumox-client/src/lib/api/: errors.ts  game.ts  request.ts  session.ts  sync.ts
flumox-client/src/lib/connect/: reconnect.ts  watchdog.ts
flumox-client/src/styles/: forms.module.css  forms.module.css.d.ts  main.css
flumox-client/src/translations/: cs.yaml  en.yaml  translations.d.ts
flumox-game-tracker/: Cargo.toml  Containerfile
flumox-game-tracker/src/: db.rs  error.rs  main.rs  parts.rs  routes.rs
flumox-seed-maker/: Cargo.toml
flumox-seed-maker/src/: main.rs
flumox-server/: Cargo.toml
flumox-server/src/: action.rs  error.rs  extract.rs  main.rs  server.rs  session.rs  state.rs  types.rs  view.rs
flumox-server/src/api/: game.rs  mod.rs  session.rs  socket.rs  view.rs
flumox-server/src/db/: mod.rs  session.rs  state.rs
flumox-server/src/message/: listen.rs  mod.rs  notify.rs
flumox-server/src/paths/: mod.rs
flumox/src/: action.rs  attributes.rs  error.rs  expr.rs  game.rs  lib.rs  main.rs  solution.rs  text.rs  toast.rs  view_context.rs
flumox/src/widget/: countdown.rs  mod.rs  prompt.rs  text.rs
http-forwarded-header/: Cargo.toml
http-forwarded-header/src/: lib.rs
time-expr/: Cargo.toml
time-expr/src/: error.rs  eval.rs  expr.rs  lib.rs  test.rs  value.rs
time-expr/src/parse/: mod.rs  temporal.rs  tokens.rs
