[package]
name = "flumox-game-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers", "macros"] }
clap = { version = "4.3.11", features = ["derive", "env"] }
deadpool-postgres = "0.10.5"
flumox = { path = "../flumox" }
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.171", features = ["derive"] }
time = "0.3.23"
tokio = { version = "1.29.1", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-postgres = { version = "0.7.8", features = [
    "with-time-0_3",
    "with-serde_json-1",
    "with-uuid-1",
] }
tower-http = { version = "0.4.1", features = [
    "trace",
    "set-header",
    "compression-deflate",
    "compression-gzip",
    "compression-br",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }
uuid = { version = "1.4.0", features = ["serde"] }
