[package]
name = "flumox-game-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
deadpool-postgres = "0.10.5"
flumox = { path = "../flumox" }
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.204", features = ["derive"] }
time = "0.3.36"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-postgres = { version = "0.7.10", features = [
    "with-time-0_3",
    "with-serde_json-1",
    "with-uuid-1",
] }
tower-http = { version = "0.5.2", features = [
    "trace",
    "set-header",
    "compression-deflate",
    "compression-gzip",
    "compression-br",
    "compression-zstd",
    "validate-request",
    "auth",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
uuid = { version = "1.10.0", features = ["serde"] }
