[package]
name = "flumox-seed-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
json5 = "0.4.1"
postgres-protocol = "0.6.5"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
