[package]
name = "flumox-seed-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
json5 = "0.4.1"
postgres-protocol = "0.6.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
