[package]
name = "flumox-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers", "macros"] }
base64 = "0.21.2"
blake2 = "0.10.6"
channel-map = { path = "../channel-map" }
clap = { version = "4.3.8", features = ["derive", "env"] }
deadpool-postgres = "0.10.5"
fingerprint-struct = "0.1.0"
flumox = { path = "../flumox" }
getrandom = "0.2.10"
http = "0.2.9"
indexmap = "2.0.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
time = { version = "0.3.22", features = ["serde", "macros"] }
time-expr = { path = "../time-expr" }
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
tokio-postgres = { version = "0.7.8", features = [
    "with-time-0_3",
    "with-serde_json-1",
    "with-uuid-1",
    "array-impls",
] }
tower-http = { version = "0.4.1", features = [
    "fs",
    "trace",
    "sensitive-headers",
    "compression-deflate",
    "compression-gzip",
    "compression-br",
    "set-header",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
