[package]
name = "flumox"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.2.6"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
time-expr = { path = "../time-expr" }
unicode-normalization = "0.1.23"
